:sparkles: add: photos receiver to tsoa
