# express/server/common/swagger.json
@@ -53,6 +53,34 @@
         ]
       }
     },
+    "/photos/receiver/{uniqueCode}": {
+      "post": {
+        "operationId": "Foo",
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            },
+            "description": "Ok"
+          }
+        },
+        "security": [],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "uniqueCode",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ]
+      }
+    },
     "/post-box/receiver/{uniqueCode}": {
       "get": {
         "operationId": "ReceiveNotification",
